[package]
name = "pinglow"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = {version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"]}
chrono = {version = "0.4", features = ["serde"]}
log = {version = "0.4.27"}
env_logger = "0.11" 
kube = { version = "2.0", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.25", default-features = false, features = ["v1_33"] }
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
futures = "0.3"
anyhow = "1.0"
serde_json = "1.0"
thiserror = "2"
refinery = {version = "0.8", features = ["tokio-postgres"]}
rocket = { version = "0.5", features = ["json"] }
reqwest = "0.12"
openssl = { version = "0.10", features = ["vendored"] }
dashmap = "6.1.0"

[dev-dependencies]
rustfmt = "0.10.0"
