# Cargo.toml
[workspace]
members = [
  "src/pinglow",
  "src/pinglow-runner",
  "src/common"
]

resolver = "2"

[workspace.package]
version = "0.10.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/sbettid/pinglow"

[workspace.dependencies]
utoipa = {version = "5", features = ["chrono"]}
serde = { version = "1.0", features = ["derive", "rc"] }
schemars = {version = "1", features = ["chrono04"]}
chrono = {version = "0.4", features = ["serde"]}
tokio-postgres = {version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"]}
log = {version = "0.4.27"}
anyhow = "1.0"
kube = { version = "3", features = ["derive", "runtime"] }
serde_json = "1.0"
k8s-openapi = { version = "0.26", features = ["latest", "schemars"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "1.0", features = ["tokio-comp"] }
thiserror = "2"
env_logger = "0.11" 
